--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
                 <div class="platforms-scroll">
                     <div class="platforms-track">
                         <!-- Logos des radios et plateformes -->
-                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="./img/classic21.png" alt="Classic 21"></a>
-                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="./img/nostalgie.png" alt="Nostalgie"></a>
-                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="./img/vivacité.png" alt="Vivacité"></a>
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité"></a>
                         <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik"></a>
                         <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify"></a>
                         <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="img/deezer.png" alt="Deezer"></a>
@@ -269,7 +269,7 @@
                         <!-- Répétition pour créer un effet continu -->
                         <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21"></a>
                         <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie"></a>
-                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacité.png" alt="Vivacité"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité"></a>
                         <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik"></a>
                         <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify"></a>
                         <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music"></a>
