--- a/index.html
+++ b/index.html
@@ -343,11 +343,11 @@
         <div class="header-content">
             <h1 class="logo">DANDYSHOES</h1>
             <p class="tagline">BLOODY R'n'R BAND FROM CHARLEROI 🇧🇪.</p>
-            <a href="#music" class="cta-button">Découvrir "Thunder"</a>
+            <a href="#music" class="cta-button">Out now : "Thunder"</a>
             
             <!-- Ajout de la section des plateformes -->
             <div class="platforms-container">
-                <p class="as-seen-on">already seen on</p>
+                <p class="as-seen-on">already sound on</p>
                 <div class="platforms-scroll">
                     <div class="platforms-track">
                         <!-- Logos des radios et plateformes -->
