--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
             <a href="#about">About</a>
             <a href="#tour">Tour</a>
             <a href="#gallery">Gallery</a>
+            <a href="videos.html">Videos</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
