Remove video.js and add videos.html and videos.js for the DandyShoes video section, implementing video modal functionality, category filtering, and responsive design features.

--- a/videos.html
+++ b/videos.html
@@ -362,6 +362,6 @@
     </footer>
     
     <script src="main.js"></script>
-    <script src="video.js"></script>
+    <script src="videos.js"></script>
 </body>
 </html>
