Enhance mobile responsiveness and touch targets in video section styles

--- a/videos.html
+++ b/videos.html
@@ -44,7 +44,7 @@
     <section class="video-hero-section">
         <div class="video-hero-container">
             <div class="hero-backdrop">
-                <img src="img/thunder-backdrop.jpg" alt="Thunder music video backdrop">
+                <img src="img/DandyShoesBand.jpg" alt="Thunder music video backdrop">
                 <!-- Gradient overlay for better text visibility -->
                 <div class="overlay-gradient"></div>
             </div>
