--- a/videos.html
+++ b/videos.html
@@ -98,7 +98,7 @@
                             <!-- Video Card 1 -->
                             <div class="video-card" data-category="music-videos">
                                 <div class="card-thumbnail">
-                                    <img src="img/DandyShoesBand.png" alt="Thunder">
+                                    <img src="img/DandyShoesBand.jpg" alt="Thunder">
                                     <div class="play-overlay">
                                         <svg viewBox="0 0 24 24">
                                             <path d="M8 5v14l11-7z"/>
