--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
     </nav>
     
     <header id="home">
+        <!-- Parallax background container -->
+        <div class="parallax-bg">
+            <div class="parallax-overlay"></div>
+            <!-- You can place your background image here -->
+            <img src="img/DandyShoesBand.jpg" alt="Dandyshoes background" class="parallax-image">
+        </div>
+        
         <div class="lightning-bg"></div>
         <div class="lightning"></div>
         <div class="lightning"></div>
