--- a/index.html
+++ b/index.html
@@ -94,25 +94,25 @@
                 <p class="as-seen-on">already sound on</p>
                 <div class="platforms-scroll">
                     <div class="platforms-track">
-                        <!-- Logos des radios et plateformes -->
-                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21"></a>
-                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie"></a>
-                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité"></a>
-                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik"></a>
-                        <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify"></a>
-                        <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="img/deezer.png" alt="Deezer"></a>
-                        <a href="https://music.apple.com/fr/artist/dandy-shoes/1457452619" target="_blank" class="platform-logo"><img src="img/applemusique.png" alt="Apple Music"></a>
-                        <a href="https://music.youtube.com/search?q=dandyshoes" target="_blank" class="platform-logo"><img src="img/youtube.png" alt="YouTube Music"></a>
-                        <a href="https://awa.fm/" target="_blank" class="platform-logo"><img src="img/awa.png" alt="AWA"></a>
-                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music"></a>
+                        <!-- Logos des radios et plateformes en blanc -->
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="img/deezer.png" alt="Deezer" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://music.apple.com/fr/artist/dandy-shoes/1457452619" target="_blank" class="platform-logo"><img src="img/applemusique.png" alt="Apple Music" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://music.youtube.com/search?q=dandyshoes" target="_blank" class="platform-logo"><img src="img/youtube.png" alt="YouTube Music" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://awa.fm/" target="_blank" class="platform-logo"><img src="img/awa.png" alt="AWA" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
                         
                         <!-- Répétition pour créer un effet continu -->
-                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21"></a>
-                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie"></a>
-                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité"></a>
-                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik"></a>
-                        <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify"></a>
-                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music"></a>
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
+                        <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music" style="filter: brightness(0) invert(1); max-height: 40px; width: auto;"></a>
                     </div>
                 </div>
             </div>
