--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
         <div class="lightning-bg" style="z-index: 3;"></div>
         <div class="lightning" style="z-index: 4;"></div>
         <div class="lightning" style="z-index: 4;"></div>
-        <div class="thunder-effect" style="z-index</div>
+        <div class="thunder-effect" style="z-index: 4;"></div>
         
         <!-- Main content with higher z-index to ensure visibility -->
-        <div class="header-content" style="position: relative; z-index: 10;"></div>
+        <div class="header-content"></div>
             <h1 class="logo">DANDYSHOES</h1>
             <p class="tagline">BLOODY R'n'R BAND FROM CHARLEROI 🇧🇪.</p>
             <a href="#music" class="cta-button">Out now : "Thunder"</a>
@@ -94,9 +94,9 @@
                 <div class="platforms-scroll">
                     <div class="platforms-track">
                         <!-- Logos des radios et plateformes en blanc -->
-                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
-                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
-                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
+                        <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21" class="platform-logo-img"></a>
+                        <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie" class="platform-logo-img"></a>
+                        <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité" class="platform-logo-img"></a>
                         <a href="https://www.rtbf.be/tipik/" target="_blank" class="platform-logo"><img src="img/tipik.png" alt="Tipik" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
                         <a href="https://open.spotify.com/artist/66q035OaxY3ZEhEuaErIUU" target="_blank" class="platform-logo"><img src="img/spotify-logo.png" alt="Spotify" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
                         <a href="https://www.deezer.com/fr/artist/8785458" target="_blank" class="platform-logo"><img src="img/deezer.png" alt="Deezer" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
@@ -105,7 +105,7 @@
                         <a href="https://awa.fm/" target="_blank" class="platform-logo"><img src="img/awa.png" alt="AWA" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
                         <a href="https://music.amazon.fr/search/dandyshoes" target="_blank" class="platform-logo"><img src="img/amazonmusique.png" alt="Amazon Music" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
                         
-                        <!-- Répétition pour créer un effet continu -->
+                        <!-- Repetition to create a continuous effect -->
                         <a href="https://www.rtbf.be/classic21/" target="_blank" class="platform-logo"><img src="img/classic21.png" alt="Classic 21" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
                         <a href="https://www.nostalgie.be/" target="_blank" class="platform-logo"><img src="img/nostalgie.png" alt="Nostalgie" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
                         <a href="https://www.rtbf.be/vivacite/" target="_blank" class="platform-logo"><img src="img/vivacite.png" alt="Vivacité" style="filter: brightness(0) invert(1); max-height: 52px; width: auto;"></a>
