respponsibe netflix header

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             <!-- Background image -->
             <img src="img/DandyShoesBand.jpg" alt="Dandyshoes background" class="parallax-image" style="width: 100%; height: 100%; object-fit: cover;">
             <!-- Dark overlay to make content visible -->
-            <div class="dark-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.6);"></div>
+            <!-- Replace your current dark-overlay div with this gradient overlay -->
+            <div class="dark-overlay"></div>
         </div>
     
         <!-- Lightning effects -->
