--- a/index.html
+++ b/index.html
@@ -367,6 +367,21 @@
         </div>
     </section>
     
+    <section class="section video-promo-section">
+        <div class="container">
+            <div class="video-promo-content">
+                <h2 class="section-title">Check Out Our Music Videos</h2>
+                <p class="video-promo-text">Watch our latest music videos, live performances and behind-the-scenes footage.</p>
+                <a href="videos.html" class="cta-button video-cta">
+                    <svg viewBox="0 0 24 24" class="video-icon">
+                        <path d="M23.495 6.205a3.007 3.007 0 00-2.088-2.088c-1.87-.501-9.396-.501-9.396-.501s-7.507-.01-9.396.501A3.007 3.007 0 00.527 6.205a31.247 31.247 0 00-.522 5.805 31.247 31.247 0 00.522 5.783 3.007 3.007 0 002.088 2.088c1.868.502 9.396.502 9.396.502s7.506 0 9.396-.502a3.007 3.007 0 002.088-2.088 31.247 31.247 0 00.5-5.783 31.247 31.247 0 00-.5-5.805zM9.609 15.601V8.408l6.264 3.602z"/>
+                    </svg>
+                    Watch All Videos
+                </a>
+            </div>
+        </div>
+    </section>
+    
     <section id="gallery" class="section gallery-section">
         <div class="container">
             <h2 class="section-title">Gallery</h2>
