--- a/index.html
+++ b/index.html
@@ -322,13 +322,13 @@
             <div class="tour-list">
                 <div class="tour-date">
                     <div class="date-location">
-                        <div class="date">May 10</div>
+                        <div class="date">May 23</div>
                         <div>
-                            <div class="location">Beaumont, Belgium</div>
-                            <div class="venue">3 Auvergnats</div>
+                            <div class="location">Charleroi, Belgium</div>
+                            <div class="venue">Cercle Saint-Charles</div>
                         </div>
                     </div>
-                    <a href="https://maps.google.com/?q=3+Auvergnats+Beaumont+Belgique" target="_blank" class="tickets-btn">Go !</a>
+                    <a href="https://maps.google.com/?q=Cercle+Saint-Charles+Charleroi+Belgique" target="_blank" class="tickets-btn">Go !</a>
                 </div>
                 
                 <div class="tour-date">
@@ -340,6 +340,17 @@
                         </div>
                     </div>
                     <a href="https://maps.google.com/?q=Nouille+Stock+Festival+Senzeilles+Belgique" target="_blank" class="tickets-btn">Go !</a>
+                </div>
+
+                <div class="tour-date">
+                    <div class="date-location">
+                        <div class="date">June 13</div>
+                        <div>
+                            <div class="location">Beaumont, Belgium</div>
+                            <div class="venue">Les 3 Auvergniats</div>
+                        </div>
+                    </div>
+                    <a href="https://maps.google.com/?q=3+Auvergnats+Beaumont+Belgique" target="_blank" class="tickets-btn">Go !</a>
                 </div>
                 
                 <div class="tour-date">
