--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div style="margin-top: 4rem; text-align: center;">
                 <h3 style="color: var(--primary); margin-bottom: 1rem;">Booking & Press</h3>
                 <p style="margin-bottom: 0.5rem;">For professional inquiries:</p>
-                <p><strong>Email:</strong> booking@dandyshoes.com</p>
+                <p><strong>Email:</strong> dandyshoes@hotmail.be</p>
             </div>
         </div>
     </section>
