--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!-- Parallax background container -->
         <div class="parallax-bg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
             <!-- Background image -->
-            <img src="img/DandyShoesBand.jpg" alt="Dandyshoes background" class="parallax-image" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="img/DandyShoesBand.jpg" alt="Dandyshoes background" class="parallax-image" style="width: 100%; height: 100%; object-fit: cover; filter: blur(5px);">
             <!-- Dark overlay to make content visible -->
             <!-- Replace your current dark-overlay div with this gradient overlay -->
             <div class="dark-overlay"></div>
@@ -286,32 +286,32 @@
                     </div>
                     
                     <div class="streaming-links">
-                        <a href="https://open.spotify.com/album/66q035OaxY3ZEhEuaErIUU" target="_blank">
+                        <a href="https://open.spotify.com/album/66q035OaxY3ZEhEuaErIUU" target="_blank" data-play="spotify">
                             <svg viewBox="0 0 24 24">
                                 <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.419 1.56-.299.421-1.02.599-1.559.3z"/>
                             </svg>
                         </a>
-                        <a href="https://music.imusician.pro/a/5miFIQ7_?fbclid=IwY2xjawJyJUdleHRuA2FlbQIxMAABHszA7gLVSagU3n8CWAPr5tE_13lNkN65fQkQNTvM-7hDYDqgJeM5GAlNuIav_aem_10EoVZlzsnuJgxBBjubyDw" target="_blank">
+                        <a href="https://music.imusician.pro/a/5miFIQ7_" target="_blank" data-play="apple">
                             <svg viewBox="0 0 24 24">
                                 <path d="M12 0C5.376 0 0 5.376 0 12s5.376 12 12 12 12-5.376 12-12S18.624 0 12 0zm0 19.104c-3.924 0-7.104-3.18-7.104-7.104S8.076 4.896 12 4.896s7.104 3.18 7.104 7.104-3.18 7.104-7.104 7.104zm0-13.332c-3.432 0-6.228 2.796-6.228 6.228S8.568 18.228 12 18.228s6.228-2.796 6.228-6.228-2.796-6.228-6.228-6.228zm3.024 6.228c0 1.668-1.356 3.024-3.024 3.024S8.976 13.668 8.976 12 10.332 8.976 12 8.976s3.024 1.356 3.024 3.024zm-1.284 0c0-.96-.78-1.74-1.74-1.74s-1.74.78-1.74 1.74.78 1.74 1.74 1.74 1.74-.78 1.74-1.74z"/>
                             </svg>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="#" target="_blank" data-play="facebook">
                             <svg viewBox="0 0 24 24">
                                 <path d="M23.998 12c0-6.628-5.372-12-11.999-12C5.372 0 0 5.372 0 12c0 5.988 4.388 10.952 10.124 11.852v-8.384H7.078v-3.469h3.046V9.356c0-3.008 1.792-4.669 4.532-4.669 1.313 0 2.686.234 2.686.234v2.953H15.83c-1.49 0-1.955.925-1.955 1.874V12h3.328l-.532 3.469h-2.796v8.384c5.736-.9 10.124-5.864 10.124-11.853z"/>
                             </svg>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="#" target="_blank" data-play="instagram">
                             <svg viewBox="0 0 24 24">
                                 <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.148 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/>
                             </svg>
                         </a>
-                        <a href="#" target="_blank">
+                        <a href="#" target="_blank" data-play="youtube">
                             <svg viewBox="0 0 24 24">
                                 <path d="M23.495 6.205a3.007 3.007 0 00-2.088-2.088c-1.87-.501-9.396-.501-9.396-.501s-7.507-.01-9.396.501A3.007 3.007 0 00.527 6.205a31.247 31.247 0 00-.522 5.805 31.247 31.247 0 00.522 5.783 3.007 3.007 0 002.088 2.088c1.868.502 9.396.502 9.396.502s7.506 0 9.396-.502a3.007 3.007 0 002.088-2.088 31.247 31.247 0 00.5-5.783 31.247 31.247 0 00-.5-5.805zM9.609 15.601V8.408l6.264 3.602z"/>
                             </svg>
                         </a>
-                    </div>
+                    </div>                        
                 </div>
             </div>
             
