--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!-- Parallax background container -->
         <div class="parallax-bg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
             <!-- Background image -->
-            <img src="img/DandyShoesBand.jpg" alt="Dandyshoes background" class="parallax-image" style="width: 100%; height: 100%; object-fit: cover;">
+            <img src="img/DandyShoesBand.jpg" alt="Dandyshoes background" class="parallax-image">
             <!-- Dark overlay to make content visible -->
             <!-- Replace your current dark-overlay div with this gradient overlay -->
             <div class="dark-overlay"></div>
