--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <h2 class="section-title">Our Music</h2>
         
         <div class="latest-release">
-            <div class="release-art video-container static-border hover-3d">>
+            <div class="release-art video-container static-border hover-3d">
                 <!-- Nouveau lecteur YouTube intégré -->
                 <div class="youtube-container">
                     <iframe 
