--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                 <div class="contact-card glass-card">
                     <h3>🎸 Booking & Press</h3>
                     <p>Pour les demandes professionnelles :</p>
-                    <p><strong>dandyshoes@hotmail.com</strong></p>
+                    <p><strong>dandyshoes@hotmail.be</strong></p>
                 </div>
                 
                 <div class="contact-card glass-card">
