--- a/videos.html
+++ b/videos.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DANDYSHOES - Videos from the Belgian Rock'n'Roll band from Charleroi">
     <title>DANDYSHOES | Videos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="video.css">
+    <link rel="stylesheet" href="css/dist/style.css">
+    <link rel="stylesheet" href="css/sections/video.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
