--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             <a href="#tour">Tour</a>
             <a href="#gallery">Gallery</a>
             <a href="videos.html">Videos</a>
+            <a href="pro.html">Pro</a>
             <a href="#contact">Contact</a>
         </div>
     </nav>
@@ -627,6 +628,7 @@
                 <a href="#music">Music</a>
                 <a href="#about">About</a>
                 <a href="#tour">Tour</a>
+                <a href="pro.html">Pro</a>
                 <a href="#gallery">Gallery</a>
                 <a href="#contact">Contact</a>
             </div>
