--- a/pro.html
+++ b/pro.html
@@ -6,6 +6,7 @@
     <meta name="description" content="DANDYSHOES - Professional Information - Belgian Rock'n'Roll Band">
     <title>DANDYSHOES | Pro Area</title>
     <link rel="stylesheet" href="pro.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="dist/css/style.css">
     <link rel="stylesheet" href="dist/css/style.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
