--- a/pro.html
+++ b/pro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DANDYSHOES - Professional Information - Belgian Rock'n'Roll Band">
     <title>DANDYSHOES | Pro Area</title>
-    <link rel="stylesheet" href="pro.css">
+    <link rel="stylesheet" href="css/sections/pro.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="dist/css/style.css">
     <link rel="stylesheet" href="dist/css/style.min.css">
