--- a/index.html
+++ b/index.html
@@ -473,22 +473,22 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item animated-border">
-                    <img src="img/gallery-1.jpg" alt="Dandyshoes in concert">
+                    <img src="img/Allan Chant + effets.jpg" alt="Dandyshoes in concert">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/gallery-2.jpg" alt="Dandyshoes backstage">
+                    <img src="img/Antoine R5.jpg.jpg" alt="Dandyshoes backstage">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/romain.jpg" alt="Dandyshoes in studio">
+                    <img src="img/Romain R2.jpg" alt="Dandyshoes in studio">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/arnaud.jpg" alt="Dandyshoes with fans">
+                    <img src="img/Arnaud R1.jpg" alt="Dandyshoes with fans">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/antoine.jpg" alt="Dandyshoes tour">
+                    <img src="img/Ensemble Color.jpg" alt="Dandyshoes tour">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/allan.jpg" alt="Dandyshoes acoustic session">
+                    <img src="img/Ensemble R1.jpg" alt="Dandyshoes acoustic session">
                 </div>
             </div>
         </div>
