--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     <img src="img/Allan Chant + effets.jpg" alt="Dandyshoes in concert">
                 </div>
                 <div class="gallery-item animated-border">
-                    <img src="img/Antoine R5.jpg.jpg" alt="Dandyshoes backstage">
+                    <img src="img/Antoine R5.jpg" alt="Dandyshoes backstage">
                 </div>
                 <div class="gallery-item animated-border">
                     <img src="img/Romain R2.jpg" alt="Dandyshoes in studio">
