--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     </div>
                 </div>
                 <div class="tour-buttons">
-                    <a href="https://maps.google.com/?q=Cercle+Saint-Charles+Charleroi+Belgique" target="_blank" class="tickets-btn">Go !</a>
+                    <a href="https://maps.google.com/?q=Cercle+Saint-Charles+Charleroi+Belgique" target="_blank" class="tickets-btn">Maps</a>
                     <!-- Le bouton calendrier sera ajouté automatiquement par JavaScript -->
                 </div>
             </div>
@@ -409,7 +409,7 @@
                     </div>
                 </div>
                 <div class="tour-buttons">
-                    <a href="https://maps.google.com/?q=Nouille+Stock+Festival+Senzeilles+Belgique" target="_blank" class="tickets-btn">Go !</a>
+                    <a href="https://maps.google.com/?q=Nouille+Stock+Festival+Senzeilles+Belgique" target="_blank" class="tickets-btn">Maps</a>
                 </div>
             </div>
 
@@ -422,7 +422,7 @@
                     </div>
                 </div>
                 <div class="tour-buttons">
-                    <a href="https://maps.google.com/?q=3+Auvergnats+Beaumont+Belgique" target="_blank" class="tickets-btn">Go !</a>
+                    <a href="https://maps.google.com/?q=3+Auvergnats+Beaumont+Belgique" target="_blank" class="tickets-btn">Maps</a>
                 </div>
             </div>
             
@@ -435,7 +435,7 @@
                     </div>
                 </div>
                 <div class="tour-buttons">
-                    <a href="https://maps.google.com/?q=Chop+n+Rock+Sedan+France" target="_blank" class="tickets-btn">Go !</a>
+                    <a href="https://maps.google.com/?q=Chop+n+Rock+Sedan+France" target="_blank" class="tickets-btn">Maps</a>
                 </div>
             </div>
             
@@ -448,7 +448,7 @@
                     </div>
                 </div>
                 <div class="tour-buttons">
-                    <a href="https://maps.google.com/?q=Dandyshoes+Private+Showcase" target="_blank" class="tickets-btn">Go !</a>
+                    <a href="https://maps.google.com/?q=Dandyshoes+Private+Showcase" target="_blank" class="tickets-btn">Maps</a>
                 </div>
             </div>
         </div>
