--- a/index.html
+++ b/index.html
@@ -351,25 +351,25 @@
                         <h4 style="color: var(--primary); margin-bottom: 1rem;">The Band</h4>
                         <ul class="members-list">
                             <li class="member-item">
-                                <img src="img/allan3.jpg" alt="Allan" class="member-img">
+                                <img src="img/Allan Chant.jpg" alt="Allan" class="member-img">
                                 <div>
                                     <strong style="color: var(--primary);">Allan</strong> - Vocals, Guitar
                                 </div>
                             </li>
                             <li class="member-item">
-                                <img src="img/antoine.jpg" alt="Antoine" class="member-img">
+                                <img src="img/Antoine R4.jpg" alt="Antoine" class="member-img">
                                 <div>
                                     <strong style="color: var(--primary);">Antoine</strong> - Bass
                                 </div>
                             </li>
                             <li class="member-item">
-                                <img src="img/romain2.jpg" alt="Romain" class="member-img">
+                                <img src="img/Romain R2.jpg" alt="Romain" class="member-img">
                                 <div>
                                     <strong style="color: var(--primary);">Romain</strong> - Drums
                                 </div>
                             </li>
                             <li class="member-item">
-                                <img src="img/arnaud.jpg" alt="Arnaud" class="member-img">
+                                <img src="img/Arnaud R4 + effect.jpg" alt="Arnaud" class="member-img">
                                 <div>
                                     <strong style="color: var(--primary);">Arnaud</strong> - Guitar
                                 </div>
