--- a/index.html
+++ b/index.html
@@ -500,6 +500,19 @@
                     <a href="https://maps.google.com/?q=3+Auvergnats+Beaumont+Belgique" target="_blank" class="tickets-btn">Maps</a>
                 </div>
             </div>
+
+            <div class="tour-date">
+                <div class="date-location">
+                    <div class="date">July 12</div>
+                    <div>
+                        <div class="location">Erpion, Belgium</div>
+                        <div class="venue">Espace Fun</div>
+                    </div>
+                </div>
+                <div class="tour-buttons">
+                    <a href="https://maps.google.com/?q=Espace+Fun+Erpion+Belgique" target="_blank" class="tickets-btn">Maps</a>
+                </div>
+            </div>
             
             <div class="tour-date">
                 <div class="date-location">
