--- a/pro.html
+++ b/pro.html
@@ -120,7 +120,14 @@
                     <!-- Coordonnées Booking -->
                     <div class="pro-card contact-info">
                         <h3>📞 Contacts Booking</h3>
-                        
+
+                        <div style="margin-bottom: 2rem; padding: 1.5rem; background: rgba(255, 222, 89, 0.15); border-radius: 8px; border: 2px solid var(--primary);">
+                            <h4 style="color: var(--primary); margin-bottom: 1rem;">🎸 Agence de Booking Officielle :</h4>
+                            <p style="font-size: 1.2rem;"><strong>DRF Booking</strong></p>
+                            <p><a href="https://durbuyrock.be/booking" target="_blank" style="color: var(--primary); font-weight: 600; font-size: 1.1rem;">durbuyrock.be/booking</a></p>
+                            <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.9;">Pour toute demande de concert, festival ou événement privé</p>
+                        </div>
+
                         <div style="margin-bottom: 2rem;">
                             <h4 style="color: var(--primary); margin-bottom: 1rem;">Contact Principal :</h4>
                             <p><strong>Nom :</strong> Romain Mousset</p>
@@ -128,11 +135,11 @@
                             <p><strong>Téléphone :</strong> <a href="tel:+32495605889" style="color: var(--primary);">+32 495 60 58 89</a></p>
                             <p><strong>Rôle :</strong> Directeur Technique · Régisseur</p>
                         </div>
-                        
+
                         <div style="margin-bottom: 2rem;">
                             <h4 style="color: var(--primary); margin-bottom: 1rem;">Contact Technique :</h4>
                             <p><strong>Nom :</strong> Antoine Chauvaux</p>
-                            <p><strong>Email :</strong> <a href="dandyshoes@hotmail.be" style="color: var(--primary);">dandyshoes@hotmail.be</a></p>
+                            <p><strong>Email :</strong> <a href="mailto:dandyshoes@hotmail.be" style="color: var(--primary);">dandyshoes@hotmail.be</a></p>
                             <p><strong>Téléphone :</strong> <a href="tel:+32495605889" style="color: var(--primary);">+32 495 60 58 89</a></p>
                             <p><strong>Rôle :</strong> Bassiste · Régisseur</p>
                         </div>
