--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
 
             <!-- Announcement New EP -->
             <div class="glass-card" style="padding: 1.5rem; margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto; text-align: center; background: linear-gradient(135deg, rgba(255, 60, 60, 0.1), rgba(138, 43, 226, 0.1));">
-                <h4 style="color: var(--primary); margin-bottom: 0.5rem; font-size: 1.3rem;">🎵 New EP Coming Soon</h4>
-                <p style="color: #ff3c3c; font-weight: bold; font-size: 1.1rem; animation: pulse 2s infinite;">Autumn 2025</p>
+                <h4 style="color: var(--primary); margin-bottom: 0.5rem; font-size: 1.3rem;">🎵 New EP</h4>
+                <p style="color: #ff3c3c; font-weight: bold; font-size: 1.1rem; animation: pulse 2s infinite;">coming soon </p>
                 <p style="opacity: 0.8; margin-top: 0.5rem;">We're working on new music. Stay tuned!</p>
             </div>
 
