--- a/index.html
+++ b/index.html
@@ -336,9 +336,21 @@
             <div class="spotify-embeds" style="display: grid; gap: 2rem; max-width: 800px; margin: 0 auto;">
                 <!-- Thunder -->
                 <div class="glass-card" style="padding: 1.5rem;">
-                    <h4 style="color: var(--primary); margin-bottom: 1rem;">🎸 Thunder (Single)</h4>
+                    <h4 style="color: var(--primary); margin-bottom: 1rem;">🎸 Thunder (Single 2025)</h4>
                     <iframe style="border-radius:12px; width: 100%;"
                             src="https://open.spotify.com/embed/track/1vI4M0sVfCIHsRkPhO9SlP?utm_source=generator&theme=0"
+                            height="152"
+                            frameBorder="0"
+                            allowfullscreen=""
+                            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                            loading="lazy"></iframe>
+                </div>
+
+                <!-- Sunday -->
+                <div class="glass-card" style="padding: 1.5rem;">
+                    <h4 style="color: var(--primary); margin-bottom: 1rem;">🎵 Sunday (Single 2018)</h4>
+                    <iframe style="border-radius:12px; width: 100%;"
+                            src="https://open.spotify.com/embed/track/3OXbIVBfIwGuiH8YFzhVGG?utm_source=generator&theme=0"
                             height="152"
                             frameBorder="0"
                             allowfullscreen=""
