--- a/index.html
+++ b/index.html
@@ -642,10 +642,9 @@
             <!-- Champs cachés pour Formspree -->
             <input type="hidden" name="_next" value="https://www.dandyshoes.be/index.html?success=true">
             <input type="hidden" name="_subject" value="Nouveau message depuis dandyshoes.be">
-            <input type="hidden" name="_cc" value="dandyshoes@hotmail.be">
-            
+
             <!-- Protection anti-spam -->
-            <input type="text" name="_gotcha" style="display:none">
+            <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off">
             
             <div class="form-group">
                 <input type="text" id="name" name="name" required>
