--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                     <h3>🎸 Booking & Management</h3>
                     <p><strong>DRF Booking</strong></p>
                     <p><a href="https://durbuyrock.be/booking" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 600;">durbuyrock.be/booking</a></p>
-                    <p style="margin-top: 0.5rem; font-size: 0.9rem;">Press: <strong>dandyshoes@hotmail.be</strong></p>
+                    <p style="margin-top: 0.5rem; font-size: 0.9rem;">Press: <strong>dandyshoes.mgmt@gmail.com</strong></p>
                 </div>
                 
                 <div class="contact-card glass-card">
