--- a/index.html
+++ b/index.html
@@ -49,8 +49,35 @@
     <link rel="alternate" hreflang="en" href="https://www.dandyshoes.be/">
     <link rel="alternate" hreflang="x-default" href="https://www.dandyshoes.be/">
     
+    <!-- CSS critique pour éviter le FOUC -->
+    <style>
+        /* CSS critique pour éviter le FOUC */
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #fff;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            opacity: 0;
+            transition: opacity 0.2s ease-in;
+        }
+        body.loaded {
+            opacity: 1;
+        }
+        /* Cache le contenu jusqu'au chargement complet */
+        .navbar, header, section {
+            visibility: hidden;
+        }
+        body.loaded .navbar,
+        body.loaded header,
+        body.loaded section {
+            visibility: visible;
+        }
+    </style>
+
     <!-- Stylesheet and Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
+    <noscript><link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet"></noscript>
     <link rel="stylesheet" href="css/dist/style.min.css?v=2.1">
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -61,6 +88,13 @@
     
     <!-- Google Search Console Verification - Add your verification code -->
     <!-- <meta name="google-site-verification" content="your-verification-code"> -->
+    <!-- Script pour éviter le FOUC -->
+    <script>
+        window.addEventListener('DOMContentLoaded', function() {
+            document.body.classList.add('loaded');
+        });
+    </script>
+
      <script type="application/ld+json">
 {
   "@context": "https://schema.org",
