feat: add shop link to navbar with highlight

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
             <a href="videos.html">Videos</a>
             <a href="pro.html">Pro</a>
             <a href="#contact">Contact</a>
+            <a href="https://shop-liart-eight-13.vercel.app" class="nav-shop-link" target="_blank" style="color: #ffd700; font-weight: 600;">🛒 Shop</a>
         </div>
     </nav>
     
