fix: lien Deezer EP Diurne

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             </svg>
                             Apple Music
                         </a>
-                        <a href="https://www.deezer.com/fr/album/PLACEHOLDER" target="_blank" style="display: flex; align-items: center; gap: 0.8rem; padding: 0.7rem 1rem; color: var(--light); text-decoration: none; border-radius: 8px; transition: background 0.2s; font-size: 0.9rem;">
+                        <a href="https://www.deezer.com/fr/album/901923952" target="_blank" style="display: flex; align-items: center; gap: 0.8rem; padding: 0.7rem 1rem; color: var(--light); text-decoration: none; border-radius: 8px; transition: background 0.2s; font-size: 0.9rem;">
                             <svg viewBox="0 0 24 24" width="18" height="18" fill="#ff0092">
                                 <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm5.894 8.221l-1.97-.001c-.156 0-.338.203-.338.527v5.477c0 .325.182.528.338.528h1.97c.156 0 .338-.203.338-.528V8.748c0-.324-.182-.527-.338-.527zM9.732 8.221H7.762c-.156 0-.338.203-.338.527v5.477c0 .325.182.528.338.528h1.97c.156 0 .338-.203.338-.528V8.748c0-.324-.182-.527-.338-.527zm-3.162 0H3.6c-.156 0-.338.203-.338.527v5.477c0 .325.182.528.338.528h1.97c.156 0 .338-.203.338-.528V8.748c0-.324-.182-.527-.338-.527zm9.492 3.252h-1.97c-.156 0-.338.203-.338.528v2.225c0 .325.182.528.338.528h1.97c.156 0 .338-.203.338-.528v-2.225c0-.325-.182-.528-.338-.528zm-3.162 0h-1.97c-.156 0-.338.203-.338.528v2.225c0 .325.182.528.338.528h1.97c.156 0 .338-.203.338-.528v-2.225c0-.325-.182-.528-.338-.528z"/>
                             </svg>
